--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -25,7 +25,7 @@
       </property>
       <layout class="QVBoxLayout" name="verticalLayout_2">
        <item>
-        <widget class="QCustomPlot" name="widget" native="true"/>
+        <widget class="QCustomPlot" name="plotDisplay" native="true"/>
        </item>
       </layout>
      </widget>
