--- a/dialogaddpoint.ui
+++ b/dialogaddpoint.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Dialog</string>
+   <string>Add point to graph</string>
   </property>
   <widget class="QDialogButtonBox" name="buttonBox">
    <property name="geometry">
